# camera-v4l2-server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cc  main.cpp
cmake/: FetchDrogon.cmake  FetchFFmpeg.cmake  FetchFmt.cmake  FetchJsoncpp.cmake  FetchLive.cmake  FetchLive555.cmake  FetchSpdlog.cmake  FetchZlib.cmake  FindFFmpeg.cmake  PatchFile.cmake
patches/: 001_drogon_disable_install  002_trantor_disable_install  003_drogon_jsoncpp_static_win32
src/: CMakeLists.txt  avcodec_utils.h  main.cpp
src/app/: NtFactoryDevice.cpp  NtFactoryDevice.h  Pipeline.cpp  Pipeline.h
src/camera/: CameraDeviceSource.cpp  CameraDeviceSource.h
src/camera_device/: CameraDevice.cpp  CameraDevice.h
src/common/: NtDeviceInterface.h  NtDummyVideoDevice.cpp  NtDummyVideoDevice.h
src/core/: DataPackets.cpp  DataPackets.h  NtDeviceFormat.h  NtDeviceInterface.h  NtMediaChannels.cpp  NtMediaChannels.h  Observer.h  ThreadsafeQueue.h  globs.cpp  globs.h  utils.h
src/core/mioc/: ServiceContainer.h  mioc.cpp  mioc.h
src/device/: CameraDeviceSource.cpp  DataPackets.h  NtDeviceInterface.h  NtDummyVideoDevice.cpp  NtDummyVideoDevice.h  NtFrameConverter.cpp  NtFrameConverter.h  NtMediaChannel.cpp  NtMediaChannel.h  NtMediaChannels.cpp  NtMediaChannels.h  NtVideoEncoder.cpp  NtVideoEncoder.h  Observer.h  Pipeline.cpp  Pipeline.h  ThreadsafeQueue.cpp  ThreadsafeQueue.h  glob.h
src/device/mioc/: ServiceFactory.h  SingletonContainer.h  mioc.cpp
src/rtsp/: BaseServerMediaSubsession.cpp  BaseServerMediaSubsession.h  CameraRtspServer.cpp  CameraRtspServer.h  MemoryBufferSink.cpp  MemoryBufferSink.h  NtRtspApp.cpp  NtRtspApp.h  NtRtspServer.cpp  NtRtspServer.h  NtUsageEnvironment.cpp  NtUsageEnvironment.h  UnicastServerMediaSubsession.cpp  UnicastServerMediaSubsession.h
src/rtsp_server/: Logger.cpp  Logger.h  NtUsageEnvironment.cpp  NtUsageEnvironment.h  RtspServer.cpp  RtspServer.h
src/web/: WebServer.cpp  WebServer.h
src/web/controllers/: Channel.cc  Channel.h  Upload.cc  Upload.h  utilities.hpp
src/web_server/: WebServer.cpp  WebServer.h
